--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "nodejs",
+  "name": "service-platform",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A simple service booking platform",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6"
-  }
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "author": "Saimun",
+  "license": "MIT",
+  "keywords": []
 }
