Assistant checkpoint: Set up basic service booking platform structure
Assistant generated file changes:
- package.json: Update dependencies
- server.js: Update server configuration
- routes/bookings.js: Create bookings route
- routes/profiles.js: Create profiles route
- database/db.js: Update database schema
- public/index.html: Update frontend interface
- public/styles.css: Add styles
- public/script.js: Update frontend logic

---

User prompt:

I want to make this project. See all details and help me step by step. I need all codes for each files. Everything will manage you and you will tell what to do.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
   "name": "service-platform",
   "version": "1.0.0",
-  "description": "A simple service booking platform",
+  "description": "A service booking platform",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,14 +12,12 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "stripe": "^14.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "author": "Saimun",
-  "license": "MIT",
-  "keywords": []
+  }
 }
